Added static_assert with no mesasge demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,14 @@ endif()
 project(cpp17_demo)
 
 file(GLOB APPLICATION_HEADERS
-     ./include/*.hpp)
+     ./include/*.hpp
+     ./include/core_language/*.hpp
+     ./include/library/*.hpp)
 
 file(GLOB APPLICATION_SOURCES
-     ./src/*.cpp)
+     ./src/*.cpp
+     ./src/core_language/*.cpp
+     ./src/library/*.cpp)
 
 add_executable(${PROJECT_NAME}
                "${APPLICATION_HEADERS}"
