--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,18 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/c,qt,c++,linux,cmake,windows,qtcreator
 
+# Created by https://www.gitignore.io/api/visualstudiocode
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
+
+# End of https://www.gitignore.io/api/visualstudiocode
+
 # Executable
 cpp17_demo
 
